# rezolus

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  license_template.txt  rust-toolchain  rustfmt.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cargo.yml
augur/: Cargo.toml  README.md  build.rs  config.toml  rustfmt.toml  sample.thrift
augur/crates/annotate/: Cargo.toml
augur/crates/annotate/src/: command.rs  hostname.rs  lib.rs  systemd.rs
augur/crates/annotate/src/mesos/: container.rs  mod.rs  state.rs
augur/crates/collector/perf/: Cargo.toml
augur/crates/collector/perf/src/: example-sample.json  input.rs  lib.rs  perf-script.py
augur/crates/common/: Cargo.toml
augur/crates/common/src/: convert.rs  lib.rs  sample.rs  serde.rs  traits.rs
augur/crates/emitter/kafka/: Cargo.toml
augur/crates/emitter/kafka/src/: config.rs  lib.rs  metrics.rs
augur/crates/emitter/pyroscope/: Cargo.toml
augur/crates/emitter/pyroscope/src/: lib.rs
augur/crates/encoder/: Cargo.toml
augur/crates/encoder/src/: lib.rs  thrift.rs  zstd.rs
augur/crates/pprof/: Cargo.toml
augur/crates/pprof/src/: lib.rs
augur/crates/thrift/: Cargo.toml
augur/crates/thrift/src/: bqrow.rs  lib.rs  sample.rs
augur/src/: config.rs  exporter.rs  lib.rs  main.rs
configs/: ci-no_perf.toml  ci.toml  container.toml  default.toml  example.toml  libcall.toml  macos.toml  memcache.toml  tcptest.toml  usercall.toml
docs/: DESIGN.md  METRICS.md
src/: http.rs  main.rs  sampler.rs
src/common/: bpf.rs  config.rs  file.rs  histogram.rs  http.rs  kernel_version.rs  mod.rs  net.rs  value_to_index2.c
src/config/: container.rs  cpu.rs  cpuidle.rs  disk.rs  ebpf.rs  general.rs  kafka.rs  mod.rs  network.rs  perf.rs  samplers.rs  softnet.rs
src/config/exposition/: kafka.rs  mod.rs
src/exposition/: http.rs  kafka.rs  mod.rs
src/metrics/: heatmap.rs  mod.rs  stream.rs
src/metrics/channel/: mod.rs
src/metrics/entry/: mod.rs
src/metrics/error/: mod.rs
src/metrics/metrics/: mod.rs
src/metrics/outputs/: mod.rs
src/metrics/source/: mod.rs
src/metrics/summary/: mod.rs
src/metrics/traits/: count.rs  float_convert.rs  mod.rs  primitive.rs  statistic.rs  value.rs
src/samplers/: mod.rs
src/samplers/container/: mod.rs  statistics.rs
src/samplers/cpu/: bpf.c  config.rs  mod.rs  next.rs  perf.c  stat.rs  statistics.rs
src/samplers/cpuidle/: config.rs  mod.rs  stat.rs  statistics.rs
src/samplers/disk/: bpf.c  config.rs  device.rs  entry.rs  mod.rs  stat.rs  statistics.rs
src/samplers/ebpf/: mod.rs
src/samplers/ebpf/block/: bpf.c  io_size.c  mod.rs  statistics.rs
src/samplers/ebpf/ext4/: ext4dist.c  mod.rs  statistics.rs
src/samplers/ebpf/network/: bpf.c  mod.rs  statistics.rs
src/samplers/ebpf/scheduler/: bpf.c  mod.rs  statistics.rs
src/samplers/ebpf/tcp/: bpf.c  mod.rs  statistics.rs
src/samplers/ebpf/xfs/: bpf.c  mod.rs  statistics.rs
src/samplers/ext4/: bpf.c  config.rs  mod.rs  stat.rs
src/samplers/http/: config.rs  mod.rs  stat.rs
src/samplers/interrupt/: bpf.c  config.rs  mod.rs  stat.rs
src/samplers/krb5kdc/: .mod.rs.rustfmt  bpf.c  config.rs  mod.rs  stat.rs
src/samplers/libcall/: config.rs  mod.rs  stat.rs
src/samplers/memcache/: config.rs  mod.rs  stat.rs
src/samplers/memory/: config.rs  mod.rs  stat.rs
src/samplers/network/: bpf.c  config.rs  entry.rs  interface.rs  mod.rs  protocol.rs  stat.rs  statistics.rs
src/samplers/ntp/: config.rs  mod.rs  stat.rs
src/samplers/nvidia/: config.rs  mod.rs  stat.rs
src/samplers/page_cache/: bpf.c  config.rs  mod.rs  stat.rs
src/samplers/perf/: config.rs  event.rs  mod.rs  stat.rs  statistics.rs
src/samplers/process/: config.rs  mod.rs  stat.rs
src/samplers/rezolus/: config.rs  mod.rs  stat.rs  statistics.rs
src/samplers/scheduler/: bpf.c  config.rs  mod.rs  perf.c  stat.rs
src/samplers/softnet/: config.rs  mod.rs  stat.rs  statistics.rs
src/samplers/tcp/: bpf.c  config.rs  mod.rs  stat.rs
src/samplers/udp/: config.rs  mod.rs  stat.rs
src/samplers/usercall/: config.rs  mod.rs  stat.rs
src/samplers/xfs/: bpf.c  config.rs  mod.rs  stat.rs
src/stats/: http.rs  kafka.rs  mod.rs
tests/data/proc/: stat
tests/data/proc/1000/: stat  statm
tests/data/proc/net/: softnet_stat
