[package]
name = "rezolus"
version = "2.13.1-alpha.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
license = "Apache-2.0"
build = "build.rs"
publish = false
edition = '2018'
description = "High resolution systems performance telemetry agent"

[dependencies]
anyhow = "1.0.41"
async-trait = "0.1.50"
bcc = { version = "0.0.31", optional = true }
clap = "2.33.3"
ctrlc = { version = "3.1.9", features = ["termination"] }
dashmap = "4.0.2"
json = "0.12.4"
kafka = { version = "0.8.0", optional = true }
libc = "0.2.98"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
nvml-wrapper = "0.7.0"
openssl = { version = "0.10.35", features = ["vendored"] }
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["blocking"] }
rustcommon-atomics = { git = "https://github.com/twitter/rustcommon", branch = "master" }
rustcommon-logger = { git = "https://github.com/twitter/rustcommon", branch = "master" }
rustcommon-metrics = { git = "https://github.com/twitter/rustcommon", branch = "master" }
rustcommon-metrics-v2 = { git = "https://github.com/twitter/rustcommon", branch = "master" }
serde = "1.0.126"
serde_derive = "1.0.126"
strum = "0.21.0"
strum_macros = "0.21.1"
sysconf = "0.3.4"
tiny_http = "0.8.2"
tokio = { version = "1.8.1", features = ["full"] }
toml = "0.5.8"
uuid = "0.8.2"
walkdir = "2.3.2"

[build-dependencies]
vergen = "3.1.0"

[features]
all = ["bpf", "push_kafka"]
default = []
bpf = ["bcc"]
bpf_static = ["bpf", "bcc/static"]
bpf_static_llvm_8 = ["bpf", "bcc/llvm_8", "bcc/static"]
bpf_static_llvm_9 = ["bpf", "bcc/llvm_9", "bcc/static"]
bpf_v0_8_0 = ["bpf", "bcc/v0_8_0"]
bpf_v0_9_0 = ["bpf", "bcc/v0_9_0"]
bpf_v0_10_0 = ["bpf", "bcc/v0_10_0"]
bpf_v0_11_0 = ["bpf", "bcc/v0_11_0"]
bpf_v0_12_0 = ["bpf", "bcc/v0_12_0"]
bpf_v0_13_0 = ["bpf", "bcc/v0_13_0"]
bpf_v0_14_0 = ["bpf", "bcc/v0_14_0"]
bpf_v0_15_0 = ["bpf", "bcc/v0_15_0"]
bpf_v0_16_0 = ["bpf", "bcc/v0_16_0"]
push_kafka = ["kafka"]

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.release]
debug = true
lto = true
codegen-units = 1
