[package]
name = "augur-annotate"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
arc-swap = "1.5"
async-trait = "0.1"
bstr = "1.0"
cstr = "0.2"
drop_guard = "0.3"
libc = "0.2"
log = "0.4"
nix = "0.25"
reqwest = "0.11"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.0", features = [ "rt", "time", "fs" ] }

augur-common = { path = "../common" }
