[package]
name = "augur-collector-perf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
bstr = "1.0"
augur-common = { workspace = true }
augur-thrift = { workspace = true }
cfg-if = "1.0.0"
futures = "0.3.24"
glob = "0.3.0"
inotify = { version = "0.10.0", features = ["stream"] }
libc = "0.2"
log = "0.4"
nix = "0.25"
rustcommon-metrics = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
tempdir = "0.3"
tokio = { workspace = true, features = ["process", "io-util"] }
