[package]
name = "augur-emitter-pyroscope"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
augur-pprof = { workspace = true }
augur-common = { workspace = true }
log = "0.4"
protobuf = "3.2"
reqwest = "0.11"
rustcommon-metrics = { workspace = true }
serde = { version = "1.0", features = [ "derive" ] }
serde_with = "2.0"
tokio = { version = "1.0", features = [ "sync" ] }
